<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- ChangeLog Demo -->
    <string name="demo_changelog_app_name">ChangeLib Demo</string>

    <!-- About -->
    <string name="title_about"><![CDATA[
            <b>ChangeLog Library</b>&nbsp;<font color="#888888">v%1$s</font>
        ]]></string>
    <string name="about_ok">OK</string>
    <string name="about_body"><![CDATA[
        <b>ChangeLog Library & Demo</b><br>
        Author: <a href="https://plus.google.com/114432517923423045208">Gabriele Mariotti</a><br>
        Get: <a href="https://github.com/gabrielemariotti/changeloglib">Source and doc</a><br>
        <br>
        <b>Thanks to:</b><br>
        dspec by <a href="https://github.com/lucasr/dspec">Lucas Rocha</a><br>

    ]]></string>

    <!-- Menu -->
    <string name="demo_changelog_menu_changelog">Library change log</string>
    <string name="demo_changelog_menu_about">About</string>
    <string name="action_menu_beer">Donate</string>

    <!-- Title -->
    <string name="demo_changelog_title_standard">Standard Example</string>
    <string name="demo_changelog_title_material">Material Example</string>
    <string name="demo_changelog_title_customexml">Custom changelog xml file Example</string>
    <string name="demo_changelog_title_withoutbulletpoint">Without Bullet Point Example</string>
    <string name="demo_changelog_title_customlayout">Custom Layout Header Example</string>
    <string name="demo_changelog_title_customlayoutrow">Custom Layout Row Example</string>
    <string name="demo_changelog_title_debug">Debug</string>
    <string name="demo_changelog_title_changelog">Change Log</string>
    <string name="demo_changelog_title_standarddialog">Standard Dialog Example</string>
    <string name="navdrawer_item_standard">Standard example</string>
    <string name="navdrawer_item_material">Material example</string>
    <string name="navdrawer_item_dialog">Standard Dialog</string>
    <string name="navdrawer_item_custom_xml">Custom xml file</string>
    <string name="navdrawer_item_custom_header">Custom layout header</string>
    <string name="navdrawer_item_custom_row">Custom layout row </string>
    <string name="navdrawer_item_without_bullter">Without Bullet point</string>
    <string name="navdrawer_item_github">Github code</string>
    <string name="navdrawer_item_donate">Donate</string>
    <string name="navdrawer_item_info">About</string>


    <!-- Error message -->
    <string name="demo_changelog_error_debug">An error occurred while parsing xml file</string>

    <!-- Label -->
    <string name="demo_changelog_label_debug_spinnerText">Choose a file</string>


    <!-- Purchase -->
    <string name="demo_purchase"><![CDATA[
        <b>Donate</b>
    ]]></string>
    <string name="purchase_cancel">Cancel</string>
    <string name="demo_item_small_beer">Buy me a coffee</string>
    <string name="demo_item_medium_beer">Buy me a toast</string>
    <string name="demo_item_large_beer">Buy me a pizza</string>



    <!-- String for Custom Version Header
         Use string with quotes if you want a space -->
    <!-- <string name="changelog_header_version">"Version "</string> -->

    <!-- BulletPoint
         If you don't want a bulletpoint you can specify it in your changelog.xml-->
    <!--<string name="changelog_row_bulletpoint">\u2022"</string> -->


</resources>
